# pipeline_test

.github/workflows/: cmake-single-platform.yml
calculator/: CMakeLists.txt  main.cpp
hello_world/: CMakeLists.txt  main.cpp
pipeline_test/: CMakeLists.txt  README.md
